Fix missing wrap on 404 page

--- a/src/app/page-not-found/page-not-found.component.scss
+++ b/src/app/page-not-found/page-not-found.component.scss
@@ -8,6 +8,7 @@ ul {
   margin: 0;
   padding: 0;
   display: flex;
+  flex-wrap: wrap;
   li {
     padding: 0;
     list-style: none;
@@ -18,4 +19,8 @@ ul {
       color: $color_gold;
     }
   }
+}
+
+.container {
+  padding-bottom: 200px !important;
 }
